--- a/tienda/src/app/carrito-compras/carrito-compras.component.html
+++ b/tienda/src/app/carrito-compras/carrito-compras.component.html
@@ -14,7 +14,7 @@
         <tbody>
           <tr *ngFor="let producto of productos; let i = index">
             <td>{{ producto.nombre }}</td>
-            <td>{{ producto.precio | currency }}</td>
+            <td>{{ producto.precio | currency }}</td><!-- Muestra el precio del producto formateado como moneda -->
             <td>
               <button class="btn btn-danger btn-sm" (click)="eliminarProducto(i)">Eliminar</button>
             </td>
