--- a/tienda/src/app/app.component.html
+++ b/tienda/src/app/app.component.html
@@ -1,15 +1,9 @@
-<nav class="navbar navbar-expand navbar-dark bg-dark">
-  <a class="navbar-brand">
-    <img src="ruta-de-la-imagen" >
-    TIENDA
-  </a>
-    <ul class="navbar-nav">
-    <li class="nav-item">
-      <a class="nav-link" routerLink="/carrito-compras">Carrito de Compras</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" routerLink="/lista-productos">Peliculas</a>
-    </li>
+
+<nav>
+  <div class="menu-icon" (click)="toggleMenu()">&#9776;</div>
+  <ul class="menu" [ngClass]="{ 'open': isOpen }">
+    <li><a routerLink="/carrito-compras">Carrito </a></li>
+    <li><a routerLink="/lista-productos">lista-productos</a></li>
   </ul>
 </nav>
 
