--- a/tienda/src/app/app.component.html
+++ b/tienda/src/app/app.component.html
@@ -1,10 +1,20 @@
-
-<nav>
-  <div class="menu-icon" (click)="toggleMenu()">&#9776;</div>
-  <ul class="menu" [ngClass]="{ 'open': isOpen }">
-    <li><a routerLink="/carrito-compras">Carrito </a></li>
-    <li><a routerLink="/lista-productos">lista-productos</a></li>
-  </ul>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#" routerLink="/inicio">Tienda</a>
+    <button class="navbar-toggler" type="button" (click)="toggleMenu()">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" [ngClass]="{ 'show': isOpen }">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/carrito-compras">Carrito</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/lista-productos">Lista de Productos</a>
+        </li>
+      </ul>
+    </div>
+  </div>
 </nav>
 
 <div class="container mt-4">
