--- a/tienda/src/app/app.component.html
+++ b/tienda/src/app/app.component.html
@@ -1,11 +1,14 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#" routerLink="/inicio">Tienda</a>
+    <a class="navbar-brand">Tienda</a>
     <button class="navbar-toggler" type="button" (click)="toggleMenu()">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" [ngClass]="{ 'show': isOpen }">
       <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/inicio">inicio</a>
+        </li>
         <li class="nav-item">
           <a class="nav-link" routerLink="/carrito-compras">Carrito</a>
         </li>
@@ -19,4 +22,12 @@
 
 <div class="container mt-4">
   <router-outlet></router-outlet>
+  <app-side-menu></app-side-menu>
 </div>
+<br>
+<br>
+<br>
+<app-fooeter></app-fooeter>
+
+
+
