--- a/tienda/src/app/app.component.html
+++ b/tienda/src/app/app.component.html
@@ -1,19 +1,19 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
-    <a class="navbar-brand">Tienda</a>
+    <a class="navbar-brand">Restaurante </a>
     <button class="navbar-toggler" type="button" (click)="toggleMenu()">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" [ngClass]="{ 'show': isOpen }">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" routerLink="/inicio">inicio</a>
+          <a class="nav-link" routerLink="/inicio">INICIO</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/carrito-compras">Carrito</a>
+          <a class="nav-link" routerLink="/carrito-compras">CAJA</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/lista-productos">Lista de Productos</a>
+          <a class="nav-link" routerLink="/lista-productos">PLATOS</a>
         </li>
       </ul>
     </div>
